fix the dashboard icon on mobile

--- a/lms/static/custom_css/dashboard.css
+++ b/lms/static/custom_css/dashboard.css
@@ -262,7 +262,7 @@ a.go-to-journeys {
   padding:7px 20px;
  }
  .course-row__status{
-  left:-12px;
+  left:-24px;
  }
  .course-row__title {
   font-size: 16px;
